add js file version

--- a/ClassDemo/Week1/index.html
+++ b/ClassDemo/Week1/index.html
@@ -2,15 +2,19 @@
 <html>
     <head>
         <title>😋</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="script.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/p5@1.11.11/lib/p5.js"></script>
     </head>
     <body>
-        this is some text in the body
+        <!-- this is some text in the body
         <p>this is a paragraph</p>
         <h1>this is a header</h1>
         <h2>this is <em>also</em> a <a href="https://github.com/samheckle/dynamic_web_development_sp_26/tree/main/week1">smaller</a> header</h2>
         <hr><hr>
         go to <a href="page2.html">page 2</a>
         <hr />
-        <img src="rick.jpg" alt="rick">
+        <img src="rick.jpg" alt="rick"> -->
+        
     </body>
 </html>
